# optimization-architecture

.github/workflows/: clang-format-check.yml  docker-image.yml
building/: Dockerfile
building/install_scripts/: install_code_check_dependencies.sh
building/local/: build_image.sh
building/scripts/: build_library.sh  code_checks.sh
code/: CMakeLists.txt
code/include/optimization_architecture/: cost_functions.hpp  optimizer_handler.hpp
code/src/: cost_functions.cpp  optimizer_handler.cpp
code/test/: test_cost_functions.cpp  test_optimizer_handler.cpp
